@@ -655,13 +655,15 @@ org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.Blend-LineStrings = Ver
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.New = Neu
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.The-blend-tolerance = Die Fangtoleranz.
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.Tolerance = Toleranz
-org.openjump.core.ui.plugin.tools.ConvexHullPlugIn.Convex-Hull = konvexe H\u00FClle als Linie
+org.openjump.core.ui.plugin.tools.ConvexHullPlugIn.Convex-Hull = Konvexe H\u00FClle als Linie
 org.openjump.core.ui.plugin.tools.ConvexHullPlugIn.Tolerance = Toleranz
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.create-polygons-from-voronoi-edges = erzeuge Polygone von Voronoi-Regionen
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.Creates-a-Delaunay-triangulation-and-returns-the-Voronoi-regions = Erzeugt eine Delaunay Triangulation und gibt Voronoi Regionen zur\u00FCck.
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.Create-Thiessen-Polygons = Thiessen Polygone erzeugen
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.create-triangulation = erzeuge Triangulation
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.no-point-geometry = keine Punkt-Geometrien
+org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.use-background-layer = Hintergrund Ebene verwenden?
+org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.background-layer-to-estimate-the-thiessen-polygon-size = Hintergrund Ebene um die Groesse der Rand-Thiessen Polygone zu Bestimmen 
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.select-point-layer = Punkt Ebene ausw\u00E4hlen
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.add-attributes-from-points = \u00FCbertrage Attribute von Punkten
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.Error-found-multiple-points-in-polygon = Fehler\: Es wurden mehrere Punkte im Polygon gefunden
