@@ -662,6 +662,8 @@ org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.Creates-a-Delauna
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.Create-Thiessen-Polygons = Crea poligoni Thiessen
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.create-triangulation = crea triangolazione
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.no-point-geometry = nessuna geometria di punti
+org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.use-background-layer = Use background layer?
+org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.background-layer-to-estimate-the-thiessen-polygon-size = background layer to estimate the border thiessen polygon size 
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.select-point-layer = seleziona livello di punti
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.add-attributes-from-points = add attributes from points
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.Error-found-multiple-points-in-polygon = Error\: found multiple points in polygon
