@@ -662,6 +662,8 @@ org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.Creates-a-Delauna
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.Create-Thiessen-Polygons = Criar pol\u00EDgonos de Thiessen
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.create-triangulation = triangular
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.no-point-geometry = geometria n\u00E3o \u00E9 do tipo ponto
+org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.use-background-layer = Use background layer?
+org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.background-layer-to-estimate-the-thiessen-polygon-size = background layer to estimate the border thiessen polygon size 
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.select-point-layer = selecione layer com pontos
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.add-attributes-from-points = add attributes from points
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.Error-found-multiple-points-in-polygon = Error\: found multiple points in polygon
